kuber/authservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          imagePullPolicy: Always
          image: plyshka/auth_server_perflib:latest
          ports:
            - containerPort: 8081
