kuber/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  ports:
    - name: authservice
      protocol: TCP
      port: 8081
  selector:
   app: authservice
